# btclaw-miner

./: .env  Cargo.toml  README.md  README_CN.md  SKILL.md  dictionary.json  miner.js  package.json
docs/: PROTOCOL.md
scripts/: wallet_gen.py
src/: constants.rs  db.rs  indexer.rs  lib.rs  main.rs  node_detect.rs  proof.rs  transaction.rs  ui.rs  utxo.rs
