[package]
name = "nexus-reactor"
version = "2.0.0"
edition = "2021"
description = "NEXUS Protocol - Dual-layer interlocking mint on Bitcoin L1"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
