[package]
name = "nexus-reactor"
version = "2.8.0"
edition = "2021"
description = "NEXUS Protocol - Dual-layer interlocking mint on Bitcoin L1"
default-run = "nexus-reactor"

[[bin]]
name = "nexus-reactor"
path = "src/main.rs"

[[bin]]
name = "nexus-indexer"
path = "src/bin/indexer.rs"

[features]
default = []
regtest = []

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
bitcoin = { version = "0.32", features = ["rand-std"] }
clap = { version = "4", features = ["derive"] }
dirs = "5.0"
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
